--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import "tailwindcss";
+@plugin "daisyui" {
+  themes: light --default;
+ }
+
+
+@plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  --color-primary: #403f3f;
+  --color-secondary: #D72050;
+  --color-base-200: #f3f3f3;
+  --color-base-300: #e7e7e7;
+}
